Add hosh.component(i,n)