@@ -1,1 +1,3 @@
-Add hosh.component(i,n)
+Add pow^ and root for hoshes
+Add an attempt of multiplicative decomposition (unfortunately, components commute)
+Adopt better decomposition
